Revision history for {{$dist->name}}:

{{$NEXT}}
  [Documentation]
  - Fixed typo in Changes.

v0.8.1    2022-07-05 12:06:58+01:00 Europe/London
  [Enhancements]
  - Added .bz2 to archive_extensions rule.

  - Updated backup_files rule.

  - Added Windows META-INF and OS/X __MACOSX to system_dirs rule.

  [Toolchain]
  - Sign release.

v0.8.0    2022-06-21 16:36:30+01:00 Europe/London
  [Enhancements]
  - Added .bkp, .backup, .npb, .old, .psb and .psc to the misc_extensions rule.

  - Added cms_prefixes rule.

  - Added backup_files rule.

  [Bug Fixes]
  - Disable capturing on some regexes.

v0.7.0    2022-06-13 16:46:40+01:00 Europe/London
  [Enhancements]
  - Add header_injection rule.

v0.6.1    2022-04-06 16:40:46+01:00 Europe/London
  [Enhancements]
  - Add .lz, .tgz and .xz to the archive_extensions rule.

  [Documentation]
  - Add version when newer rules were added.

  - Fix encoding of links in README.

  [Tests]
  - Test more blocked archive extensions.

v0.6.0    2022-02-18 18:29:34+00:00 Europe/London
  [Documentation]
  - Fix typo in Plack::Middleware::Security::Common ABSTRACT!

v0.5.1    2022-02-18 18:20:32+00:00 Europe/London
  [Enhancements]
  - Add fake_extensions and protocol_in_path_or_referer rules.

  [Documentation]
  - Bump copyright year.

  - Fix typo in Plack::Middleware::Security::Common POD.

  - Added note that this will not protect against exploits on proxies
    that are in front of the PSGI application.

v0.5.0    2021-10-19 16:55:34+01:00 Europe/London
  [Enhancements]
  - Add .yml files to the misc_extensions rule.

  - Add .mv and .mvc to the script_extensions rule.

  - Add ip_address_referer rule.

  [Documentation]
  - Gave an example of adding an exception to a rule, GH#3.

  [Tests]
  - Add text cases.

v0.4.4    2021-04-21 16:45:59+01:00 Europe/London
  [Enhancements]
  - Add more file extensions to script_extensions rule.

  [Tests]
  - Add author tests.

v0.4.3    2021-04-09 16:39:01+01:00 Europe/London
  [Enhancements]